fixed overflow-x issue

--- a/src/app/core/gui/login/login.component.css
+++ b/src/app/core/gui/login/login.component.css
@@ -53,6 +53,7 @@ footer .logo {
     flex-direction: column;
     flex: auto;
     overflow-y: auto;
+    overflow-x: hidden;
     height: 200px;
 }
 
